cabal-version:      2.4
name:               stress-test
version:            0.0.0.1

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license: Apache-2.0

author:             Sireto (Nabin Pokhrel)
maintainer:         Sireto (Nabin Pokhrel)

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

executable stress-test
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       stresstest-parallel
  Main-is:              Main.hs
  default-language:    Haskell2010
  other-modules:
                        Utils
  build-depends:        base
                        , cardano-api
                        , text
                        , containers
                        , criterion
                        , plutus-tx
                        , cborg
                        , cardano-binary
                        , mtl
                        , split
                        , clock
                        , async
                        , cardano-ledger-core
                        , random
                        , plutus-ledger-api
                        , plutus-tx
                        , directory
                        , random-shuffle
                        , bytestring
                        , cardano-ledger-babbage
                        , kuber
  ghc-options:  "-with-rtsopts=-A32m" -threaded
